Revision history for Yakuake::Sessions

0.6.2     2013-06-27 16:50:33
          - Now use TTYs to number tab titles
          - Mooified

0.5.5     2013-05-29 14:14:11
          - Made not found error appear on load
          - Bumped Class::Usul version
          - Renamed C::U::Functions::say to emit
          - Updated prereqs in Build.PL
          - Split into base class plus traits

0.4.3     2013-05-04 23:46:16
          - Split out Config class
          - Updated POD
          - Moved edit_project command to Module::Provision
          - Improved performan of yakuake_session_tt_cd

0.3.5     2013-04-30 14:24:14
          - Update inc::Bob to v1.13
          - Updated POD
          - Bumped version numbers of C:U and F:DC
          - Stopped Treptow CPAN Testing - 7ec294fe-b005-11e2-91e1-3039f74438b4
          - Updated POD
          - Updated POD

0.2.8     2013-04-22 19:55:10
          - Fixed version number in yakuake_session
          - Author tests now detect using env variable
          - Improved synopsis
          - Added dist.ini to list of project files

0.1.6     2013-04-16 23:49:35
          - Updated documentation
          - Updated inc::Bob to v1.12
          - Updated .gitpre-commit to use global revision number

0.1       2012-11-04 03:43:11
          - Initial Release